# latent-space-symmetries

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/pub/: pub-audit.md  pub-draft.md  pub-figures.md  pub-review.md  pub-revise.md  pub.md
.claude/skills/pub/: SKILL.md
.loom/: CLAUDE.md  install-metadata.json
paper/: group-moe-idea.md  outline.md
paper/latent-symmetries.1/: _progress.json  paper.tex
paper/latent-symmetries.1.review/: review.md
paper/latent-symmetries.1/figures/: fig1_layer_profile.py
paper/latent-symmetries.2/: _progress.json  paper.tex
paper/latent-symmetries.2.review/: review.md
paper/latent-symmetries.3/: literature.md  paper.tex
paper/latent-symmetries.3.audit/: audit.md
paper/latent-symmetries.3.review/: review.md
paper/latent-symmetries.4/: paper.tex
paper/latent-symmetries.4.review/: review.md
paper/latent-symmetries.5/: paper.tex
paper/latent-symmetries.5.audit/: audit.md
scripts/: activation_alignment.py  behavioral_validation.py  cache_activations.py  fact_order_permutation.py  group_relation_test.py  irrep_search.py  positive_control.py  probe_prompts.py  random_baseline.py  s2_subgroup_test.py  sae_group_analysis.py  sae_train.py  subspace_deep_dive.py  subspace_search.py
src/activation/: __init__.py  capture.py
src/datasets/: __init__.py  permutations.py  prompts.py
src/interventions/: patching.py
src/operators/: __init__.py  fitting.py  group_tests.py
src/sae/: __init__.py  features.py
tests/: test_group_tests.py  test_permutations.py  test_prompts.py
(+4 files in other folders)
