[project]
name = "latent-space-symmetries"
version = "0.1.0"
description = "Investigating approximate permutation group symmetry in transformer latent representations"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformer-lens>=3.0.0",
    "sae-lens>=6.0.0",
    "transformers>=4.37.0",
    "datasets>=2.16.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
tracking = [
    "wandb>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
